WIP(#91): fix friend 2
