# usecase/src/main/kotlin/app/meetacy/backend/usecase/types/Meeting.kt
@@ -1,6 +1,7 @@
 package app.meetacy.backend.usecase.types
 
 import app.meetacy.backend.types.datetime.Date
+import app.meetacy.backend.types.file.FileId
 import app.meetacy.backend.types.file.FileIdentity
 import app.meetacy.backend.types.location.Location
 import app.meetacy.backend.types.meeting.MeetingId
@@ -14,7 +15,7 @@ data class FullMeeting(
     val location: Location,
     val title: String?,
     val description: String?,
-    val avatarIdentity: FileIdentity? = null,
+    val avatarId: FileId?,
     val visibility: Visibility
 ) {
     val id: MeetingId = identity.id
